[package]
name = "quokka"
version = "0.1.0"
authors = ["zeroclock <zeroclock@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
headless_chrome = "0.9.0"
image = "0.23.4"
hyper = "0.13.5"
