[package]
name = "quokka"
version = "0.1.0"
authors = ["zeroclock <zeroclock@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
headless_chrome = "0.9.0"
image = "0.20"
hyper = "0.13.5"
structopt = "0.3.14"
failure = "0.1.8"
serde = "1.0.110"
serde_json = "1.0.53"
lcs-image-diff = "0.1.7"
url = "2.1.1"
